--- a/templates/_includes/blocks/block_video.html
+++ b/templates/_includes/blocks/block_video.html
@@ -1,8 +1,8 @@
-<div class="block-video">
+<div class="c-block__video">
   {{ block.video | raw }}
 </div>
 {% if block.caption | length %}
-<figcaption class="block-caption mt2 ts-subtle fs-s1">
+<figcaption class="c-block__caption">
   {{ block.caption }}
 </figcaption>
 {% endif %}
