--- a/templates/_includes/types/default.html
+++ b/templates/_includes/types/default.html
@@ -1,7 +1,7 @@
 {% import '_includes/elements' as elements %}
 {% import '_includes/helpers' as helpers %}
 
-<article class="project ctnr-l mv5">
+<article class="project l-ctnr mv5">
   <div class="project cf">
     <span class="project-background" style="background-color: {{ item.colors.one().color }}"></span>
     <div class="project-title">
