--- a/templates/home.html
+++ b/templates/home.html
@@ -11,6 +11,10 @@
 {% import '_includes/elements' as elements %}
 {% import '_includes/helpers' as helpers %}
 
+{% set doxterOptions = {
+  addTypographyStyles: true
+} %}
+
 {% block head %}
   {{ parent() }}
 
@@ -19,6 +23,7 @@
   loadjs.ready('home', {
     success: function() {
       var simplemde = new SimpleMDE({
+        autoDownloadFontAwesome: false,
       	autofocus: true,
       	autosave: {
       		enabled: true,
@@ -27,6 +32,7 @@
       	},
       	element: document.getElementById('markdown'),
       	toolbar: false,
+        spellChecker: false,
         status: false,
       });
     }
@@ -50,43 +56,48 @@
   <div id="app">
 
     {# -- METABAR -- #}
-    <header id="metabar" class="metabar">
-      <div class="metabar__top">
-        <a class="metabar__brand ph2" href="{{ siteUrl }}#" title="Home">
-          {% include '_includes/logo' %}
-        </a>
+    <header class="c-metabar {% if entry.type is defined %} c-metabar--{{entry.type }}{% endif %} l-flex">
 
-        <div class="metabar__cta ph2">
-          <div class="metabar__hover" v-cloak>
-            <a class="metabar__navLink ts-subtle" href="#">[[time]]</a>
-            <ul class="metabar__dropdown ts-subtle fs-s1 ta-right">
-              <li>{{ now | date("F d") }}&ensp;🗓</li>
-              <li>[[sunrise]]&ensp;☀️</li>
-              <li>[[sunset]]&ensp;🌙</li>
-            </ul>
-          </div>
-          <button class="metabar__darkMode" title="Toggle darkmode" onclick="toggleDarkness()">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-              <path d="M17.75,4.09L15.22,6.03L16.13,9.09L13.5,7.28L10.87,9.09L11.78,6.03L9.25,4.09L12.44,4L13.5,1L14.56,4L17.75,4.09M21.25,11L19.61,12.25L20.2,14.23L18.5,13.06L16.8,14.23L17.39,12.25L15.75,11L17.81,10.95L18.5,9L19.19,10.95L21.25,11M18.97,15.95C19.8,15.87 20.69,17.05 20.16,17.8C19.84,18.25 19.5,18.67 19.08,19.07C15.17,23 8.84,23 4.94,19.07C1.03,15.17 1.03,8.83 4.94,4.93C5.34,4.53 5.76,4.17 6.21,3.85C6.96,3.32 8.14,4.21 8.06,5.04C7.79,7.9 8.75,10.87 10.95,13.06C13.14,15.26 16.1,16.22 18.97,15.95M17.33,17.97C14.5,17.81 11.7,16.64 9.53,14.5C7.36,12.31 6.2,9.5 6.04,6.68C3.23,9.82 3.34,14.64 6.35,17.66C9.37,20.67 14.19,20.78 17.33,17.97Z" />
-            </svg>
-          </button>
+      {# -- BRAND -- #}
+      <a class="c-metabar__brand" href="{{ siteUrl }}#" title="Home">
+        {% include '_includes/logo' %}
+      </a>
+
+      {# -- NAVIGATION -- #}
+      <nav class="c-metabar__nav">
+        <div class="c-metabar__hover" v-cloak>
+          <a class="c-metabar__navLink" href="#">[[time]]</a>
+          <ul class="c-metabar__dropdown">
+            <li class="c-metabar__navLink">{{ now | date("F d") }}</li>
+            <li class="c-metabar__navLink">[[sunrise]]</li>
+            <li class="c-metabar__navLink">[[sunset]]</li>
+          </ul>
         </div>
+      </nav>
+
+      {# -- CALL TO ACTION -- #}
+      <div class="c-metabar__cta">
+        <button class="c-metabar__darkMode" title="Toggle darkmode" onclick="toggleDarkness()">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+            <path d="M17.75,4.09L15.22,6.03L16.13,9.09L13.5,7.28L10.87,9.09L11.78,6.03L9.25,4.09L12.44,4L13.5,1L14.56,4L17.75,4.09M21.25,11L19.61,12.25L20.2,14.23L18.5,13.06L16.8,14.23L17.39,12.25L15.75,11L17.81,10.95L18.5,9L19.19,10.95L21.25,11M18.97,15.95C19.8,15.87 20.69,17.05 20.16,17.8C19.84,18.25 19.5,18.67 19.08,19.07C15.17,23 8.84,23 4.94,19.07C1.03,15.17 1.03,8.83 4.94,4.93C5.34,4.53 5.76,4.17 6.21,3.85C6.96,3.32 8.14,4.21 8.06,5.04C7.79,7.9 8.75,10.87 10.95,13.06C13.14,15.26 16.1,16.22 18.97,15.95M17.33,17.97C14.5,17.81 11.7,16.64 9.53,14.5C7.36,12.31 6.2,9.5 6.04,6.68C3.23,9.82 3.34,14.64 6.35,17.66C9.37,20.67 14.19,20.78 17.33,17.97Z" />
+          </svg>
+        </button>
       </div>
     </header>
 
-    <main id="main" class="main">
+    <main class="l-main">
       <article>
         {% if currentUser and currentUser.username == "connorbaer" %}
 
         {# -- HEADER -- #}
-        <header class="ctnr-s">
-          <div class="header w100 mt4 mb5">
-            <h1 id="greeting" class="header__title header__title--color">[[ greeting ]], Sir.&nbsp;</h1>
-            <h2 class="header__subtitle">Today is a new opportunity.</h2>
+        <header class="l-ctnr l-flex l-flex--center">
+          <div class="c-header l-w75">
+            <h1 id="greeting" class="c-header__title c-header__title--color">[[ greeting ]], Sir.&nbsp;</h1>
+            <h2 class="c-header__subtitle">Today is a new opportunity.</h2>
           </div>
         </header>
 
-        <div class="ctnr-s">
+        <div class="l-ctnr l-flex l-flex--center">
 
           {# -- NEW JOURNAL -- #}
           {% set latestEntry = craft.entries.section('journal').one() %}
@@ -95,7 +106,7 @@
             {% set entry = latestEntry %}
           {% endif %}
 
-          <section class="w100 mv5">
+          <section class="l-w75">
             <form id="journal" method="post" accept-charset="UTF-8">
 
               {{ csrfInput() }}
@@ -108,9 +119,9 @@
                 <input type="hidden" name="entryId" value="{{ entry.id }}">
               {% endif %}
 
-              <textarea id="markdown" class="form__textarea mv2" placeholder="What did you do today?" name="fields[markdown]">{% if entry is defined %}{{ entry.markdown.getRaw() }}{% endif %}</textarea>
+              <textarea id="markdown" class="o-form__textarea mv2" placeholder="What did you do today?" name="fields[markdown]">{% if entry is defined %}{{ entry.markdown.raw }}{% endif %}</textarea>
 
-              <input class="button" type="submit" value="Save">
+              <input class="o-button" type="submit" value="Save">
             </form>
           </section>
 
@@ -121,12 +132,12 @@
 
           {% for post in posts if post.dateCreated | date('j') < now | date('j') %}
 
-            <article class="w100 mv5">
-              <header class="ta-center">
-                <h2 class="mt3 fs-t2 fw-bold lh1"><a class="ts-link" href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></h2>
+            <article class="l-w75">
+              <header class="c-header">
+                <h2 class="c-header__title"><a class="t-link" href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></h2>
               </header>
-              <section class="block-text">
-                {{ post.markdown }}
+              <section class="block__text">
+                {{ post.markdown.html(doxterOptions) }}
               </section>
             </article>
 
@@ -137,11 +148,11 @@
         {% else %}
 
           {# -- HEADER -- #}
-          <header class="ctnr-s">
-            <div class="header w100 mv5">
-              <h1 id="greeting" class="header__title header__title--color">Hello stranger.&nbsp;</h1>
-              <h2 class="header__subtitle">You’ve discovered Area 51.</h2>
-              <p class="header__meta mv2 fs-s1 ts-subtle"><a class="ts-link" href="/admin/login">Login →</a></p>
+          <header class="l-ctnr l-flex l-flex--center">
+            <div class="c-header c-header--tall l-w75">
+              <h1 id="greeting" class="c-header__title c-header__title--color">Hello stranger.&nbsp;</h1>
+              <h2 class="c-header__subtitle">You’ve discovered Area 51.</h2>
+              <p class="c-header__meta mv2 fs-s1 ts-subtle"><a class="t-link" href="/admin/login">Login →</a></p>
             </div>
           </header>
 
@@ -150,8 +161,8 @@
     </main>
   </div>
 
-  <footer id="footer" class="footer">
-    <small class="footer-legal ph3 ta-center"><span>© {{ "now" | date("Y") }} {{ siteName | split('·') | first }}. {{ "All rights reserved." | translate }}</span>·<span>{{ "Tel" | translate }}: <a href="tel:+4915121208376" title="Call Connor">(+49) 151 2120 8376</a></span>·<span>{{ "Email" | translate }}: <a href="mailto:hello@connorbaer.co" title="Email Connor">hello@connorbaer.co</a></span>·<span><a href="/legal">{{ "Legal" | translate }}</a></span></small>
+  <footer class="c-footer">
+    <small class="c-footer__legal"><span>© {{ "now" | date("Y") }} {{ siteName | split('·') | first }}. {{ "All rights reserved." | translate }}</span>·<span>{{ "Tel" | translate }}: <a href="tel:+4915121208376" title="Call Connor">(+49) 151 2120 8376</a></span>·<span>{{ "Email" | translate }}: <a href="mailto:hello@connorbaer.co" title="Email Connor">hello@connorbaer.co</a></span>·<span><a href="/legal">{{ "Legal" | translate }}</a></span></small>
   </footer>
 
   {% endminify %}
