--- a/templates/offline.html
+++ b/templates/offline.html
@@ -13,12 +13,10 @@
 
 {% block main %}
 	<article>
-		<header class="mv5">
-			<div class="ctnr-s ta-center">
-        <div class="w100">
-					<h1 class="mb1 fs-t3 fw-bold">You’re offline. ⚡️</h1>
-					<p class="fs-t1 lh1">It seems that you’re no longer connected to the internet. Check your connection and try again.</p>
-				</div>
+		<header class="l-ctnr l-flex l-flex--center">
+      <div class="c-header c-header--tall l-w66">
+				<h1 class="c-header__title">You’re offline.&nbsp;⚡️&nbsp;</h1>
+				<p class="c-header__subtitle">It seems that you’re no longer connected to the internet. Check your connection and try again.</p>
 			</div>
 		</header>
 	</article>
