--- a/source/css/base/_base.scss
+++ b/source/css/base/_base.scss
@@ -1,6 +1,5 @@
 // Base
 // ----
-
 html,
 body,
 div,
@@ -108,33 +107,25 @@ section {
   display: block;
 }
 
+@include typi-init;
+
 html {
+  @include mappy-bp(max-width 350px) {
+    font-size: 87.5%;
+  }
+
   transition: background-color $an-short, color $an-short;
 
   background-color: var(--oc-gray-8);
   color: var(--oc-gray-9);
 
   font-family: Arial, sans-serif;
-  font-size: 16px;
-  line-height: $lh-normal;
 
   word-wrap: break-word;
   box-sizing: border-box;
 
   &.fonts-loaded {
     font-family: $ff-sans;
-  }
-
-  @media screen and (max-width: 22.5em) {
-    font-size: 14px;
-  }
-
-  @media #{$bp-medium} {
-    font-size: 18px;
-  }
-
-  @media screen and (min-width: 90.1em) {
-    font-size: 21px;
   }
 }
 
@@ -148,7 +139,7 @@ html {
 body {
   position: relative;
 
-  min-width: 100vw;
+  max-width: 100vw;
   min-height: 100vh;
 
   transition: background-color $an-short;
@@ -156,16 +147,6 @@ body {
   background-color: var(--oc-white);
 
   overflow-x: hidden;
-}
-
-.main {
-  min-height: 60vh;
-
-  padding-top: 6.8125rem;
-
-  @media #{$bp-small} {
-    padding-top: 3.61rem;
-  }
 }
 
 [v-cloak] {
@@ -203,8 +184,8 @@ table {
 }
 
 hr {
-  margin-top: $sp-medium;
-  margin-bottom: $sp-medium;
+  margin-top: vr(1);
+  margin-bottom: vr(1.25);
 
   border: 0;
 
