--- a/source/css/components/_footer.scss
+++ b/source/css/components/_footer.scss
@@ -1,90 +1,70 @@
-/*
-  FOOTER
-
-  Prefooter
-  Navigation
-  Legal
-*/
-
-
-.footer {
-  padding-top: $sp-small;
+// Footer
+// ------
+.c-footer {
   background-color: var(--oc-gray-0);
 }
 
-// Prefooter //
 
-.footer-prefooter {
+// Prefooter
+// ---------
+.c-footer__prefooter {
+  padding-top: vr(2);
+  padding-bottom: vr(2);
+
+  text-align: center;
+
   strong {
-    font-weight: $fw-sans-bold;
+    font-weight: $fw-bold;
   }
 
   em {
-    font-size: $fs-t3;
+    @include typi("t3");
+
     font-style: normal;
+    font-weight: $fw-light;
   }
 
   a {
-    @extend %ts-link;
+    @include t-link;
 
-    color: $oc-one-6;
+    color: oc(primary);
   }
 }
 
-.footer-brand {
-  width: 100%;
 
-  @media #{$bp-small} {
-    width: calc(100% / 3);
-  }
-}
+// Legal
+// -----
+.c-footer__legal {
+  @include typi("s1");
 
-// Navigation //
-
-.footer-navigation {
-  width: 50%;
-  line-height: $lh-normal;
-
-  @media #{$bp-small} {
-    width: calc(100% / 3);
-  }
-}
-
-.footer-navLink {
-  transition: color $an-short;
-
-  &:hover,
-  &:focus,
-  &.footer-navActive {
-    color: $oc-one-6;
-  }
-}
-
-// Legal //
-
-.footer-legal {
   display: block;
-  padding-top: $sp-tiny;
-  padding-bottom: $sp-tiny;
-  border-top: 1px solid var(--oc-gray-2);
+
+  margin: 0;
+  padding-top: vr(.5);
+  padding-bottom: vr(.5);
+
+  border-top: 1px solid var(--oc-gray-3);
+
   color: var(--oc-gray-4);
-  font-family: $ff-mono;
-  font-size: $fs-s2;
+
   font-weight: 300;
-  letter-spacing: -$ls-small;
+  letter-spacing: .5px;
+  text-align: center;
 
   span {
     display: inline-block;
+
     padding: 0 .5em;
   }
 
   a {
     transition: color $an-short;
+
     text-decoration: underline;
 
     &:hover,
     &:focus {
-      color: $oc-one-6;
+      color: oc(primary);
     }
   }
 }
