--- a/source/css/home.scss
+++ b/source/css/home.scss
@@ -3,13 +3,13 @@
 
 // Custom //
 
-@import "lib/open-color";
+@import "lib/helpers";
 @import "variables/colors";
 @import "variables/typography";
 @import "variables/layout";
 @import "variables/animations";
 
-.metabar__hover {
+.c-metabar__hover {
   display: inline-block;
   position: relative;
 
@@ -21,14 +21,13 @@
   }
 }
 
-.metabar__dropdown {
+.c-metabar__dropdown {
   position: absolute;
   top: 100%;
-  right: -1.25rem;
 
-  width: 10rem;
+  width: 8rem;
 
-  padding-top: $sp-tiny;
+  padding-top: vr(.5);
 
   transition: opacity $an-short, visibility $an-short;
 
@@ -42,7 +41,7 @@
 @import "lib/simplemde.min";
 
 .CodeMirror {
-  margin: $sp-medium 0;
+  margin: vr(2) 0;
   padding: 0;
 
   transition: background-color $an-short;
@@ -59,22 +58,26 @@
 
 .CodeMirror,
 .CodeMirror-scroll {
-  min-height: $sp-large;
+  min-height: vr(4);
+}
+
+.CodeMirror-cursor {
+  border-left: 1px solid var(--oc-black);
 }
 
 .editor-statusbar {
   color: var(--oc-gray-6);
 
-  font-weight: $fw-sans-light;
+  font-weight: $fw-light;
 }
 
 
 // Choices //
 
-$choices-font-size-lg: $fs-t3;
-$choices-font-size-md: $fs-0;
-$choices-font-size-sm: $fs-s1;
-$choices-guttering: $sp-small;
+$choices-font-size-lg: ms(3);
+$choices-font-size-md: ms(0);
+$choices-font-size-sm: ms(-1);
+$choices-guttering: vr(1);
 $choices-border-radius: 4px;
 $choices-border-radius-item: 4px;
 $choices-bg-color: var(--oc-white);
@@ -82,7 +85,7 @@ $choices-bg-color-disabled: $oc-gray-4;
 $choices-bg-color-dropdown: var(--oc-white);
 $choices-text-color: var(--oc-gray-8);
 $choices-keyline-color: transparent;
-$choices-primary-color: $oc-one-6;
+$choices-primary-color: oc(primary);
 $choices-disabled-color: $oc-gray-4;
 $choices-highlight-color: $choices-primary-color;
 $choices-button-dimension: .5rem;
@@ -129,7 +132,7 @@ $choices-button-offset: .5rem;
 
   .is-focused &,
   .is-open & {
-    border-color: $oc-one-6;
+    border-color: oc(primary);
   }
 }
 
@@ -149,7 +152,7 @@ $choices-button-offset: .5rem;
     color: $oc-gray-9;
 
     &.is-highlighted {
-      border: 1px solid $oc-one-6;
+      border: 1px solid oc(primary);
 
       background-color: $oc-gray-2;
     }
@@ -166,7 +169,7 @@ $choices-button-offset: .5rem;
   border: 1px solid $choices-keyline-color;
 
   .is-open & {
-    border-color: $oc-one-6;
+    border-color: oc(primary);
   }
 
   .is-flipped & {
@@ -177,8 +180,8 @@ $choices-button-offset: .5rem;
     padding: .25rem .75rem;
 
     font-family: $ff-sans;
-    font-size: $fs-0;
-    font-weight: $fw-sans-normal;
+    font-size: ms(0);
+    font-weight: $fw-normal;
   }
 
   .#{$choices-selector}__item--selectable {
@@ -206,5 +209,5 @@ $choices-button-offset: .5rem;
 
 .is-focused ~ .form-label,
 .is-open ~ .form-label {
-  color: $oc-one-6;
+  color: oc(primary);
 }
