--- a/source/css/lib/_prism.scss
+++ b/source/css/lib/_prism.scss
@@ -5,14 +5,17 @@ Prism template by Connor Bär
 */
 code[class*="language-"],
 pre[class*="language-"] {
+  @include typi("s1");
+
   background: var(--oc-gray-1);
   color: #5e6687;
+
   font-family: $ff-mono;
-  font-size: $fs-s1;
   line-height: $lh-normal;
   text-align: left;
   white-space: pre-wrap;
   word-spacing: normal;
+
   word-break: normal;
   direction: ltr;
   tab-size: 4;
@@ -24,6 +27,7 @@ pre[class*="language-"] ::selection,
 code[class*="language-"]::selection,
 code[class*="language-"] ::selection {
   background: #dbdde6;
+
   text-shadow: none;
 }
 
@@ -32,6 +36,7 @@ code[class*="language-"] ::selection {
 pre[class*="language-"] {
   margin: .5em 0;
   padding: 1em;
+
   overflow: auto;
 }
 
@@ -39,6 +44,7 @@ pre[class*="language-"] {
 // Inline code //
 :not(pre) > code[class*="language-"] {
   padding: .1em;
+
   border-radius: .3em;
 }
 
@@ -76,7 +82,7 @@ pre[class*="language-"] {
 }
 
 .token.selector {
-  color: $oc-one-6;
+  color: oc(primary);
 }
 
 .token.attr-name {
@@ -95,7 +101,7 @@ pre[class*="language-"] {
 .token.control,
 .token.directive,
 .token.unit {
-  color: $oc-one-6;
+  color: oc(primary);
 }
 
 .token.statement,
@@ -115,6 +121,7 @@ pre[class*="language-"] {
 
 .token.inserted {
   border-bottom: 1px dotted #202746;
+
   text-decoration: none;
 }
 
@@ -136,7 +143,7 @@ pre[class*="language-"] {
 }
 
 pre > code.highlight {
-  outline: 0.4em solid $oc-red-6;
+  outline: .4em solid $oc-red-6;
   outline-offset: .4em;
 }
 
@@ -153,5 +160,5 @@ pre > code.highlight {
 // Overrides color-values for the Line Highlight plugin.
 // http://prismjs.com/plugins/line-highlight/
 .line-highlight {
-  background: linear-gradient(to right, rgba(107, 115, 148, 0.2) 70%, rgba(107, 115, 148, 0));
+  background: linear-gradient(to right, rgba(107, 115, 148, .2) 70%, rgba(107, 115, 148, 0));
 }
