--- a/source/css/styles.scss
+++ b/source/css/styles.scss
@@ -1,35 +1,42 @@
-// Dependencies and helpers
-// ------------------------
-@import "lib/deps";
-@import "helpers/helpers";
+// Helpers
+// -------
+@import "lib/normalize";
+@import "lib/helpers";
 
 // Variables
 // ---------
+@import "variables/animations";
+@import "variables/layout";
 @import "variables/colors";
 @import "variables/typography";
-@import "variables/layout";
-@import "variables/animations";
 
-// Reset and base files
-// --------------------
+// Base & resets
+// -------------
 @import "base/base";
 
 // Layouts
 // -------
 @import "layouts/layouts";
 
+// Typography
+// ----------
+@import "typography/typography";
+
 // Objects
 // -------
+@import "objects/buttons";
 @import "objects/inputs";
-@import "objects/typography";
 @import "objects/media";
 
 // Components
 // ----------
 @import "components/metabar";
 @import "components/header";
+@import "components/password";
 @import "components/blocks";
-@import "components/pages";
+@import "components/cards";
+@import "components/projects";
+@import "components/share";
 @import "components/footer";
 
 // Libraries
