--- a/source/css/variables/_typography.scss
+++ b/source/css/variables/_typography.scss
@@ -1,37 +1,53 @@
-// Typography
-// ----------
+// Typi
+// ----
+// NOTE: Access with typi(), see https://zellwk.com/blog/typi/
+$typi-breakpoint: mappy-bp;
+$typi: (
+  t4: (
+    null: (40px, 1.33)
+  ),
+  t3: (
+    null: 32px
+  ),
+  t2: (
+    null: (25px, 1.33),
+  ),
+  t1: (
+    null: 20px,
+  ),
+  base: (
+    null: (16px, 1.33),
+    large: 18px,
+    mega: 21px
+  ),
+  s0: (
+    null: (16px, 2),
+  ),
+  s1: (
+    null: (12px, 2),
+  )
+);
 
-// Font Families
 
-$ff-sans: "Overpass", Arial, sans-serif;
-$fw-sans-light: 300;
-$fw-sans-normal: 400;
-$fw-sans-bold: 700;
-$ff-mono: "Overpass Mono", Courier, monospace;
+// Font Weights
+// ------------
+$fw-light: 300;
+$fw-normal: 400;
+$fw-bold: 700;
 
-// Font Sizes
-
-$fs-t4: 2.25rem; // 36px
-$fs-t3: 2rem;    // 32px
-$fs-t2: 1.5rem;  // 24px
-$fs-t1: 1.25rem; // 20px
-$fs-0: 1rem;     // 16px
-$fs-s1: .875rem; // 14px
-$fs-s2: .75rem;  // 12px
 
 // Line Heights
+// ------------
+$lh-large: 1.75;
+$lh-normal: 1.33;
+$lh-small: 1.15;
 
-$lh-large: 2;
-$lh-normal: 1.75;
-$lh-small: 1.4;
 
-// Letter Spacing
-
-$ls-large: .1em;
-$ls-medium: .05em;
-$ls-small: .025em;
-
-// Font Faces
+// Font Families
+// -------------
+$ff-sans: "Overpass", Arial, sans-serif;
+$ff-serif: "Lora", Georgia, serif;
+$ff-mono: "Overpass Mono", Courier, monospace;
 
 @font-face {
   font-family: "Overpass";
@@ -57,19 +73,37 @@ $ls-small: .025em;
   src: local("Overpass Bold"), local("Overpass-Bold"), url(https://fonts.gstatic.com/s/overpass/v1/z_QV2-z5a6o4brQE8JEVyogp9Q8gbYrhqGlRav_IXfk.woff2) format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
 }
-@font-face {
-  font-family: "Overpass";
-  font-style: italic;
-  font-weight: 300;
 
-  src: local("Overpass Light Italic"), local("Overpass-LightItalic"), url(https://fonts.gstatic.com/s/overpass/v1/R77XtXNe7WC4SXZBLWmy8weOulFbQKHxPa89BaxZzA0.woff2) format("woff2");
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
-}
 @font-face {
   font-family: "Overpass Mono";
   font-style: normal;
   font-weight: 400;
 
   src: local("Overpass Mono Regular"), local("OverpassMono-Regular"), url(https://fonts.gstatic.com/s/overpassmono/v2/MarHoIqW2hy_po97b_wS9nn3cbdKJftHIk87C9ihfO8.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
+}
+
+@font-face {
+  font-family: "Lora";
+  font-style: normal;
+  font-weight: 400;
+
+  src: local("Lora Regular"), local("Lora-Regular"), url(https://fonts.gstatic.com/s/lora/v10/rAXKWvABQNHjPUk26ixVvvesZW2xOQ-xsNqO47m55DA.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
+}
+@font-face {
+  font-family: "Lora";
+  font-style: italic;
+  font-weight: 400;
+
+  src: local("Lora Italic"), local("Lora-Italic"), url(https://fonts.gstatic.com/s/lora/v10/_MYF_5lLoOGnzKiQsUc_vevvDin1pK8aKteLpeZ5c0A.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
+}
+@font-face {
+  font-family: "Lora";
+  font-style: normal;
+  font-weight: 700;
+
+  src: local("Lora Bold"), local("Lora-Bold"), url(https://fonts.gstatic.com/s/lora/v10/mlTYdpdDwCepOR2s5kS2CwLUuEpTyoUstqEm5AMlJo4.woff2) format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
 }
