--- a/templates/404.html
+++ b/templates/404.html
@@ -13,12 +13,10 @@
 
 {% block main %}
 	<article>
-		<header class="mv5">
-			<div class="ctnr-l ta-center">
-        <div class="w100">
-					<h1 class="mb1 fs-t3 fw-bold">Page not found. 🕵️</h1>
-					<p class="fs-t1 lh1">What’s worse, a hilarious 404 page can’t be found either.</p>
-				</div>
+		<header class="l-ctnr l-flex l-flex--center">
+			<div class="c-header c-header--tall l-w66">
+				<h1 class="c-header__title">Page not found.&nbsp;🕵&nbsp;️</h1>
+				<p class="c-header__subtitle">What’s worse, a hilarious 404 page can’t be found either.</p>
 			</div>
 		</header>
 	</article>
