--- a/templates/503.html
+++ b/templates/503.html
@@ -13,12 +13,10 @@
 
 {% block main %}
 	<article>
-		<header class="mv5">
-			<div class="ctnr-l ta-center">
-        <div class="w100">
-					<h1 class="mb1 fs-t3 fw-bold">Bear with me. 🐼</h1>
-					<p class="fs-t1 lh1">I’m currently carrying out some maintenance on my website. It will only take a minute.</p>
-				</div>
+		<header class="l-ctnr l-flex l-flex--center">
+      <div class="c-header c-header--tall l-w66">
+				<h1 class="c-header__title">Bear with me please.&nbsp;🐼&nbsp;</h1>
+				<p class="c-header__subtitle">I’m currently carrying out some maintenance on my website. It will only take a minute.</p>
 			</div>
 		</header>
 	</article>
