--- a/templates/_includes/blocks.html
+++ b/templates/_includes/blocks.html
@@ -30,20 +30,20 @@
   {# Start a new section with the appropriate width #}
   {% switch position %}
     {% case 'full' %}
-      <section class="position-full">
+      <section class="c-block--full">
         <div>
     {% case 'center' %}
-      <section class="ctnr-l position-center">
-        <div class="w100">
+      <section class="c-block--center l-ctnr">
+        <div class="l-w100">
     {% case 'text' %}
-      <section class="ctnr-s position-text">
-        <div class="w100">
+      <section class="c-block--text l-ctnr">
+        <div class="l-w66">
     {% case 'drop-right' %}
-      <section class="ctnr-l position-drop-right">
-        <div class="w100">
+      <section class="c-block--drop-right l-ctnr">
+        <div class="l-w100">
     {% case 'drop-left' %}
-      <section class="ctnr-l position-drop-left">
-        <div class="w100">
+      <section class="c-block--drop-left l-ctnr">
+        <div class="l-w100">
   {% endswitch %}
 
     {# Output the appropriate block #}
