--- a/templates/_includes/blocks/block_code.html
+++ b/templates/_includes/blocks/block_code.html
@@ -5,9 +5,9 @@
 {% endif %}
 
 {% spaceless %}
-  <div class="block-code">
-    <div class="ctnr-s">
-      <pre class="w100">
+  <div class="c-block__code">
+    <div class="l-ctnr">
+      <pre class="l-w75">
         <code class="language-{{ block.language }}">{{ block.code }}</code>
       </pre>
     </div>
