--- a/templates/_layouts/site.html
+++ b/templates/_layouts/site.html
@@ -59,7 +59,7 @@
 </head>
 
 {# -- BODY CLASS -- #}
-<body id="js-headroom" class="{{ entry is defined ? entry.section.handle : craft.app.request.segments | first }}">
+<body id="js-headroom" class="{{ entry is defined ? entry.section.handle : craft.app.request.segments | first }} {{ bodyClass is defined ? bodyClass }}">
 <!-- You know, rather than reading the source like a chump, you can see it all on GitHub like a champ: https://github.com/connor-baer/connorbaer.co -->
 
 {% block body %}{% endblock %}
