--- a/templates/blog/_amp.html
+++ b/templates/blog/_amp.html
@@ -19,92 +19,91 @@
 {% set amp = true %}
 
 {% block main %}
-  {% if entry.passphrase is empty or entry.passphrase == craft.app.request.getQueryParam('passphrase') %}
-    {% cache %}
-    {% minify %}
+  {% cache %}
+  {% minify %}
 
-    <article>
+  <article>
 
-      {# -- HEADER -- #}
-      <header>
-        {% set image = entry.image.one() %}
-        {% if image %}
-        <div class="header__image">
-          <figure>
-            {{ elements.image(image, 'amp', '16x9') }}
-          <figure>
+    {# -- HEADER -- #}
+    <header>
+      {% set image = entry.image.one() %}
+      {% if image %}
+      <div class="c-header__image">
+        <figure>
+          {{ elements.image(image, 'amp', '16x9') }}
+        <figure>
+      </div>
+      {% endif %}
+
+      <div class="l-ctnr l-flex l-flex--center">
+        <div class="c-header l-w66">
+          <h1 class="c-header__title">{{ entry.title | striptags() }}&nbsp;</h1>
+          <span class="c-header__meta">{{ elements.date(entry.postDate) }}{% if entry.category is not empty %}&nbsp;·&nbsp;{{ elements.category(entry) }}{% endif %}</span>
         </div>
-        {% endif %}
+      </div>
+    </header>
 
-        <div class="ctnr-s mv4">
-          <div class="header w100 ta-center">
-            <h1 class="header__title fs-t4">{{ entry.title | striptags() }}&nbsp;</h1>
-            <span class="header__meta mv2 fs-s1 ts-subtle">{{ elements.date(entry.postDate) }}{% if entry.category is not empty %}&nbsp;·&nbsp;{{ elements.category(entry) }}{% endif %}</span>
-          </div>
-        </div>
-      </header>
+    {# -- CONTENT -- #}
+    <div class="blocks blocks--serif">
 
-      {# -- CONTENT -- #}
-      <div class="blocks cf">
-
-        {# Post description #}
-        <div class="ctnr-s">
-          <h2 class="w100 fs-t1 fw-light">{{ entry.description }}</h2>
-        </div>
-
-        {# Body matrix #}
-        {% include '_includes/blocks' %}
-
+      {# Post description #}
+      <div class="l-ctnr l-flex l-flex--center">
+        <h2 class="blocks__title l-w66">{{ entry.description }}</h2>
       </div>
 
-      {# -- SHARE -- #}
-      <div class="ctnr-s mv4 ta-center">
-        {{ elements.share(entry.title) }}
+      {# Body matrix #}
+      {% include '_includes/blocks' %}
+
+    </div>
+
+    {# -- SHARE -- #}
+    {% include '_includes/components/share' %}
+
+  </article>
+
+  {# -- RELATED ENTRIES -- #}
+  {% set relatedPosts = craft.entries({
+    section: entry.section.handle,
+    relatedTo: ['or ', entry.tags, entry.category],
+    id: 'not ' ~ entry.id,
+    limit: '3',
+  }) %}
+
+  {% if relatedPosts | length == '3' %}
+    <div class="l-ctnr l-flex">
+      <div class="l-w100">
+        <h4 class="c-cards__title">{{ "Related Posts" | t}}</h4>
       </div>
-    </article>
 
-    {# -- RELATED ENTRIES -- #}
-    {% set relatedPosts = craft.entries({
-      section: entry.section.handle,
-      relatedTo: ['or ', entry.tags, entry.category],
-      id: 'not ' ~ entry.id,
-      limit: '3',
-    }) %}
+      {% for post in relatedPosts %}
+        <article class="c-card l-w33">
+          <a href="{{ post.url }}" title="{{ post.title }}">
 
-    {% if relatedPosts | length == '3' %}
-      <div class="ctnr-l mv4 cf">
-        <div class="cf">
-          <div class="w100 mt2">
-            <h4 class="ts-app fs-s1 fs-t1">{{ "Related Posts" | t}}</h4>
-          </div>
-
-          {% for post in relatedPosts %}
-            <article class="w1-3 fl-left mv3">
-
-              {% set matrixBlock = post.body.type('image').one() %}
-
-              {% if matrixBlock %}
-                {% set image = matrixBlock.image.one() %}
-
-                {% if image is defined %}
-                  <a href="{{ post.url }}" title="{{ post.title }}">
-                    {{ elements.image(image, 'amp', '16x9') }}
-                  </a>
-                {% endif %}
+            {# Featured image or first image from matrix blocks? #}
+            {% if post.image[0] ?? null %}
+              {% set image = post.image[0] ?? null %}
+            {% else %}
+              {% set imageBlock = post.body.type('images').one() %}
+              {% if imageBlock %}
+                {% set image = imageBlock.image.one() %}
               {% endif %}
+            {% endif %}
 
-              <h3 class="mt2 fs-t1"><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></h3>
-              <span class="ts-app fs-s1">{{ elements.date(post.postDate) }}{% if post.category is not empty %}&nbsp;·&nbsp;{{ elements.category(post) }}{% endif %}</span>
-            </article>
-          {% endfor %}
+            {% if image is defined and image %}
+              <figure class="c-card__image">
+                {{ elements.image(image, 'amp', '16x9') }}
+              </figure>
+            {% endif %}
 
-        </div>
-      </div>
-    {% endif %}
+            <h3 class="mt2 fs-t1">{{ post.title }}</h3>
+          </a>
+          <span class="ts-app fs-s1">{{ elements.date(post.postDate) }}{% if post.category is not empty %}&nbsp;·&nbsp;{{ elements.category(post) }}{% endif %}</span>
+        </article>
+      {% endfor %}
 
-    {% endminify %}
-    {% endcache %}
-  {% else %}
-    {{ elements.passphrase(entry) }}
+    </div>
   {% endif %}
+
+  {% endminify %}
+  {% endcache %}
 {% endblock %}
