--- a/templates/blog/_entry.html
+++ b/templates/blog/_entry.html
@@ -11,11 +11,13 @@
 {% import '_includes/elements' as elements %}
 {% import '_includes/helpers' as helpers %}
 
+
 {% block head %}
   {{ parent() }}
 
   <link rel="amphtml" href="{{ entry.url }}/amp">
 {% endblock %}
+
 
 {% block critical %}
   <style>
@@ -23,123 +25,98 @@
   </style>
 {% endblock %}
 
+
 {% block main %}
-  {% if entry.passphrase is empty or entry.passphrase == craft.app.request.getQueryParam('passphrase') or livePreview %}
-    {% cache %}
-    {% minify %}
+  {% cache %}
+  {% minify %}
 
-    <article>
+  <article>
 
-      {# -- HEADER -- #}
-      <header>
-        {% set image = entry.image.one() %}
-        {% if image %}
-        <div class="header__image js-photoswipe">
-          <figure>
-            <a href="{{ image.getUrl('large') }}" data-size="{{ image.getWidth('large') }}x{{ image.getHeight('large') }}">
-              {{ elements.image(image, null, '16x9') }}
-            </a>
-          </figure>
-        </div>
-        {% endif %}
-
-        <div class="ctnr-s mv4">
-          <div class="header w100 ta-center">
-            <h1 class="header__title fs-t4">{{ entry.title | striptags() }}&nbsp;</h1>
-            <span class="header__meta mv2 fs-s1 ts-subtle">{{ elements.date(entry.postDate) }}{% if entry.category is not empty %}&nbsp;·&nbsp;{{ elements.category(entry) }}{% endif %}</span>
-          </div>
-        </div>
-      </header>
-
-      {# -- CONTENT -- #}
-      <div class="blocks cf">
-
-        {# Post description #}
-        <div class="ctnr-s">
-          <h2 class="w100 fs-t1 fw-light">{{ entry.description }}</h2>
-        </div>
-
-        {# Body matrix #}
-        {% include '_includes/blocks' %}
-
+    {# -- HEADER -- #}
+    <header>
+      {% set image = entry.image.one() %}
+      {% if image %}
+      <div class="c-header__image {% if entry.type == "split" %}c-header__image--split {% endif %}js-photoswipe">
+        <figure>
+          <a href="{{ image.getUrl('large') }}" data-size="{{ image.getWidth('large') }}x{{ image.getHeight('large') }}">
+            {{ elements.image(image, null, '16x9') }}
+          </a>
+        </figure>
       </div>
-
-      {# -- SHARE -- #}
-      {% if entry.passphrase is empty %}
-        <div class="ctnr-s mv4 ta-center">
-          {{ elements.share(entry.title) }}
-        </div>
       {% endif %}
-    </article>
 
-    {# -- RELATED ENTRIES -- #}
-    {% set relatedPosts = craft.entries({
-      section: entry.section.handle,
-      relatedTo: ['or ', entry.tags, entry.category],
-      id: 'not ' ~ entry.id,
-      limit: '3',
-    }) %}
-
-    {% if relatedPosts | length == '3' %}
-      <div class="ctnr-l mv4 cf">
-        <div class="cf">
-          <div class="w100 mt2">
-            <h4 class="ts-app fs-s1 fs-t1">{{ "Related Posts" | t}}</h4>
-          </div>
-
-          {% for post in relatedPosts %}
-            <article class="w1-3 fl-left mv3">
-
-              {% set matrixBlock = post.body.type('image').one() %}
-
-              {% if matrixBlock %}
-                {% set image = matrixBlock.image.one() %}
-
-                {% if image is defined %}
-                  <a href="{{ post.url }}" title="{{ post.title }}">
-                    {{ elements.image(image, 'lazyload') }}
-                  </a>
-                {% endif %}
-              {% endif %}
-
-              <h3 class="mt2 fs-t1"><a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></h3>
-              <span class="ts-app fs-s1">{{ elements.date(post.postDate) }}{% if post.category is not empty %}&nbsp;·&nbsp;{{ elements.category(post) }}{% endif %}</span>
-            </article>
-          {% endfor %}
-
+      <div class="l-ctnr l-flex l-flex--center">
+        <div class="c-header l-w66">
+          <h1 class="c-header__title">{{ entry.title | striptags() }}&nbsp;</h1>
+          <span class="c-header__meta">{{ elements.date(entry.postDate) }}{% if entry.category is not empty %}&nbsp;·&nbsp;{{ elements.category(entry) }}{% endif %}</span>
         </div>
       </div>
-    {% endif %}
+    </header>
 
-    <script>
-    loadjs(['{{ baseUrl ~ rev('js/photoswipe.min.js') }}'], 'photoswipe');
-    loadjs.ready('photoswipe', {
-      success: function() {
-        initPhotoSwipeFromDOM('.js-photoswipe');
-      }
-    });
-    </script>
+    {# -- CONTENT -- #}
+    <div class="c-blocks c-blocks--serif">
 
-    <div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
-
-      <div class="pswp__bg"></div>
-
-      <div class="pswp__scroll-wrap">
-
-        <!-- Container that holds slides.
-          PhotoSwipe keeps only 3 of them in the DOM to save memory.
-          Don't modify these 3 pswp__item elements, data is added later on. -->
-        <div class="pswp__container">
-          <div class="pswp__item"></div>
-          <div class="pswp__item"></div>
-          <div class="pswp__item"></div>
-        </div>
+      {# Post description #}
+      <div class="l-ctnr l-flex l-flex--center">
+        <h2 class="c-blocks__title l-w66">{{ entry.description }}</h2>
       </div>
+
+      {# Body matrix #}
+      {% include '_includes/blocks' %}
+
     </div>
 
-    {% endminify %}
-    {% endcache %}
-  {% else %}
-    {{ elements.passphrase(entry) }}
+    {# -- SHARE -- #}
+    {% include '_includes/components/share' %}
+
+  </article>
+
+  {# -- RELATED ENTRIES -- #}
+  {% set relatedPosts = craft.entries({
+  section: entry.section.handle,
+  relatedTo: ['or ', entry.tags, entry.category],
+  id: 'not ' ~ entry.id,
+  limit: '3',
+  }) %}
+
+  {% if relatedPosts | length == '3' %}
+  <div class="l-ctnr l-flex">
+    <div class="l-w100">
+      <h4 class="c-cards__title">{{ "Related Posts" | t}}</h4>
+    </div>
+
+    {% for post in relatedPosts %}
+      <article class="c-card l-w33">
+        <a href="{{ post.url }}" title="{{ post.title }}">
+
+          {# Featured image or first image from matrix blocks? #}
+          {% if post.image[0] ?? null %}
+            {% set image = post.image[0] ?? null %}
+          {% else %}
+            {% set imageBlock = post.body.type('images').one() %}
+            {% if imageBlock %}
+              {% set image = imageBlock.image.one() %}
+            {% endif %}
+          {% endif %}
+
+          {% if image is defined and image %}
+            <figure class="c-card__image">
+              {{ elements.image(image, 'lazyload', '16x9') }}
+            </figure>
+          {% endif %}
+
+          <h3 class="c-card__title">{{ post.title }}</h3>
+        </a>
+        <span class="c-card__meta">{{ elements.date(post.postDate) }}{% if post.category is not empty %}&nbsp;·&nbsp;{{ elements.category(post) }}{% endif %}</span>
+      </article>
+    {% endfor %}
+
+  </div>
   {% endif %}
+
+  {# -- PHOTOSWIPE -- #}
+  {% include '_includes/photoswipe' %}
+
+  {% endminify %}
+  {% endcache %}
 {% endblock %}
