--- a/templates/madebyconnorDE/_includes/logo.html
+++ b/templates/madebyconnorDE/_includes/logo.html
@@ -1,4 +1,4 @@
-<svg class="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400">
+<svg class="c-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400">
   <defs>
     <linearGradient id="color-+-white-a" x1="0%" y1="0%" y2="100%">
       <stop offset="0%" stop-color="#DD2476"/>
